test/e2e/testdata/listenerset-tcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listener-set-tcp
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: listener-gateway
    namespace: gateway-conformance-infra
  listeners:
    - name: extra-tcp
      port: 18083
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TCPRoute
            group: gateway.networking.k8s.io
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  namespace: gateway-conformance-infra
  name: listener-tcproute
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      namespace: gateway-conformance-infra
      name: listener-set-tcp
      sectionName: extra-tcp
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
